Fixed some styling issues for smaller screens. Changed spacing in articles sections.

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ font-family: 'Bebas Neue', cursive; */
 
 body {
     background: url(../img/milky-way.jpg) center center no-repeat;
+    width: 100%;
     background-size: cover;
     font-family: 'Open Sans', sans-serif;
     color: #7F491B;
@@ -59,6 +60,7 @@ nav.navbar {
     width: 100%;
     flex-flow: row wrap;
     justify-content: space-evenly;
+    margin-bottom: 40px;
 }
 
 .preview_box {
@@ -78,10 +80,10 @@ nav.navbar {
 /* Article sections */
 
 .article {
-    height: 800px;
+    height: 950px;
     width: 100%;
     font-size: 1.3em;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-flow: column wrap;
 }
